--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,10 +7,12 @@ sites:
     url: https://Anturnia.net
   - name: Wikipedia
     url: https://en.wikipedia.org
-  - name: status
+  - name: Status
     url: https://status.jomei.tk
-  - name: Test Broken Site
-    url: https://OPSucht.net
+  - name: DNS
+    check: "tcp-ping"
+    url: 207.180.242.101
+    port: 80
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
