--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,7 +11,7 @@ sites:
     url: https://status.jomei.tk
   - name: DNS
     check: "tcp-ping"
-    url: 1.1.1.1
+    url: $IP
     port: 80
 
 status-website:
