--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,8 +21,8 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://i.imgur.com/7D1lrtH.png
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Upptime** for Anturnia.net / JoMei9019"
+  introMessage: This is a simple status page :)
   navbar:
     - title: Status
       href: /
