--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -28,6 +28,8 @@ status-website:
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
+    - title: Discord
+      href: https://dc.anturnia.net
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
