--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -20,7 +20,7 @@ status-website:
   cname: status.jomei.tk
   # baseUrl: /your-repo-name
   logoUrl: https://i.imgur.com/7D1lrtH.png
-  name: Upptime
+  name: Status
   introTitle: "**Upptime** for Anturnia.net / JoMei9019"
   introMessage: This is a simple status page :)
   navbar:
