--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,7 @@ repo: upptime # The name of this repository
 sites:
   - name: Anturnia
     url: https://Anturnia.net
+    icon: https://i.postimg.cc/X7MQ3kMd/Hcs-IKQAx-200x200.png
   - name: Wikipedia
     url: https://en.wikipedia.org
   - name: Status
