--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,8 +6,8 @@ sites:
   - name: Anturnia
     url: https://Anturnia.net
     icon: https://i.postimg.cc/X7MQ3kMd/Hcs-IKQAx-200x200.png
-  - name: Wikipedia
-    url: https://en.wikipedia.org
+  - name: Dev-Site
+    url: https://dev.jomei.tk
   - name: Status
     url: https://status.jomei.tk
   - name: Website
