--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -29,8 +29,8 @@ status-website:
   navbar:
     - title: Status
       href: /
-    - title: MC-Status
-      href: /minecraft
+    - title: Dev-site
+      href: http://dev.jomei.tk/
     - title: Website
       href: http://www.jomei.tk/
     - title: Discord
