--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,7 +7,7 @@ sites:
     url: https://Anturnia.net
     icon: https://i.postimg.cc/X7MQ3kMd/Hcs-IKQAx-200x200.png
   - name: Dev-Site
-    url: https://dev.jomei.tk
+    url: https://www.jomei.tk
   - name: Status
     url: https://status.jomei.tk
   - name: Website
