--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,7 +30,7 @@ status-website:
     - title: Status
       href: /
     - title: Dev
-      href: http://www.jomei.tk/test
+      href: http://www.jomei.tk/test.html
     - title: Website
       href: http://www.jomei.tk/
 
